2013-05-11  Jiyou Park

        * Evas: Fix crash if app use native surface in wrong engine.

2013-05-10  Tom Hacohen

        * Evas text: Fixed line size calculation when using multiple
	fonts.

2013-05-10  ChunEon Park (Hermet)

        * Evas: don't try blend on gl backened if the render option is COPY

2013-05-08  Mike Blumenkrantz

        * Edje: fix custom states for proxy parts
        * Edje: add embryo fill support for proxy parts

2013-05-07  Rafael Antognolli

        * Evas: Added evas_event_input_multi_up/down().

2013-05-06  Rafael Antognolli

        * Ecore/Wayland: Add ecore_wl_window_alpha_set/get().
        * Ecore/Wayland: Fix alpha windows on EGL backend.

2013-05-06  Cedric Bail

        * Evas: Remove SVG loader from inside the merged tree.

2013-05-06  ChunEon Park (Hermet)

        * Evas: update the map smart members really when it needs to render.

2013-05-05  Jiyoun Park (jypark)

        * Ecore_Input_Evas: Fix ecore_input_evas didn't check the device id of mouse event

2013-05-05  Jiyoun Park (jypark)

        * Evas: Fix gif loader can't load image which has normal frames and error frames

2013-04-03  Rafael Antognolli

        * Evas: Added evas_event_input_mouse_move() for internal use only.
        * Evas: Added evas_event_input_multi_move() for internal use only.

2013-04-29  ChunEon Park (Hermet)

        * Evas: Added evas_object_image_source_clip_set()/get().

2013-04-25  Tom Hacohen

        * Evas textblock: Fixed line size calculation when using multiple
	fonts.

2013-04-25  Jihoon Kim

        * Edje entry: remove duplicated ecore_imf_context_reset in adjusting the selection

2013-04-22  Mike Blumenkrantz

        * Evas: Fix recursive proxy image rendering to just render black

2013-04-22  WooHyun Jung

        * Edje: When selected word exists, selection is cleared and cursor
		remains on the current edje_entry by additional key input.

2013-04-20  Carsten Haitzler (The Rasterman)
